[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "mptool"
version = "0.0.1760866494"
description = "messagepack functions for typed CLI IPC"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "epprint @ git+https://git@github.com/jakeogh/epprint",
    "msgpack",
]
requires-python = ">=3.11"

[project.license]
text = "ISC"

[project.urls]
Homepage = "https://github.com/jakeogh/mptool"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
mptool = [
    "py.typed",
]
