[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "mptool"
version = "1!0.0.1761897651"
description = "messagepack functions for typed CLI IPC"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
]
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/mptool"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
mptool = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = ["epprint>=1!0.0.1761259484", "msgpack"]
dependencies-git = ["epprint @ git+https://git@github.com/jakeogh/epprint", "msgpack"]
index-urls = ["jakeogh.github.io", "pip-index"]
